[package]
name = "fps-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }
bevy-inspector-egui = "*"
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
